ci: add config for dash admin

--- a/nginx/merkur.conf
+++ b/nginx/merkur.conf
@@ -1,9 +1,18 @@
 server {
-    listen 80 default_server;
+    listen 8000 default_server;
 
     client_max_body_size 100M;
     charset utf-8;
 
+    # Admin
+    location ~ /admin {
+        proxy_pass http://dash-admin:80;
+        proxy_pass_header Server;
+        proxy_set_header Host $http_host;
+        proxy_redirect off;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Scheme $scheme;
+    }
     # Frontend
     location / {
         proxy_pass http://client:3000;
@@ -23,15 +32,5 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Scheme $scheme;
     }
-
-    # Admin
-    # location /dashboard {
-    #     proxy_pass http://merkur-dash:8000/admin;
-    #     proxy_pass_header Server;
-    #     proxy_set_header Host $http_host;
-    #     proxy_redirect off;
-    #     proxy_set_header X-Real-IP $remote_addr;
-    #     proxy_set_header X-Scheme $scheme;
-    # }
 }
 
