--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,12 @@ version: '3'
 
 services:
   nginx:
-    image: fholzer/nginx-brotli
+    image: nginx:1.17-alpine
     container_name: merkur_nginx
+    environment:
+      - NGINX_PORT=8000
     ports:
-      - "80:80"
+      - "80:8000"
     volumes:
       - ./nginx/log:/var/log/nginx
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
@@ -21,6 +23,15 @@ services:
     environment:
       - NEXT_PUBLIC_API_URL=http://165.227.214.134/api
       - NEXT_PUBLIC_SITE_URL=http://165.227.214.134
+    depends_on:
+        - postgres
+    networks:
+        - merkur
+  dash-admin:
+    image: merkurorg/merkur-dashboard:latest
+    container_name: merkur_dash
+    environment:
+      - REACT_APP_API=http://165.227.214.134/api
     depends_on:
         - postgres
     networks:
